--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cors": "2.8.5",
     "express": "4.17.1",
     "faker": "^4.1.0",
-    "moment": "2.18.1",
+    "moment": "^2.25.3",
     "mongoose": "5.9.7",
     "morgan": "1.10.0",
     "nodemon": "2.0.2",
@@ -57,7 +57,7 @@
     "supertest": "^4.0.2",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3"
+    "webpack-dev-server": "^3.11.0"
   },
   "jest": {
     "moduleNameMapper": {
